--- a/reblis-sabnzbd/docker-compose.yml
+++ b/reblis-sabnzbd/docker-compose.yml
@@ -8,9 +8,15 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
     volumes:
-      - /storage/sabnzbd/config:/config
-      - /storage/media/downloads:/downloads #optional
-      - /storage/media/incomplete-downloads:/incomplete-downloads #optional
+      - type: bind
+        source: /storage/sabnzbd/config
+        target: /config
+      - type: bind
+        source: /storage/media/downloads
+        target: /downloads
+      - type: bind
+        source: /storage/media/incomplete-downloads
+        target: /incomplete-downloads
     ports:
-      - 8080:8080
+      - "8080:8080"
     restart: unless-stopped
